# dboard

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  config.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  publish.yml
ci/: quality.sh  test.sh
dboard/: __init__.py  __main__.py  main.py
dboard/usecases/: __init__.py  config.py  lib_rich.py
tests/: test_dboard.py
