[tool.poetry]
name = "dboard"
version = "0.2.0"
description = ""
authors = ["Marcelo Félix"]

[tool.poetry.dependencies]
python = "^3.11.2"
rich = "^13.3.2"
PyYAML = "^6.0"
pydantic = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pre-commit = "^3.2.1"
coverage="^7.2.2"
pytest-cov="^4.0.0"
ruff = "^0.0.280"
black = "^23.7.0"
mypy = "^1.4.1"
types-PyYAML = "^6.0.12"


[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true

[tool.coverage.run]
parallel = true
source = [
    "dboard",
]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
