[project]
name = "dboard"
version = "0.3.0"
description = "A terminal dashboard"
authors = [
    { name = "Marcelo Félix"},
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "rich>=13.9.2",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.2",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "types-pyyaml>=6.0.12.20240917",
    "pytest-xdist>=3.6.1",
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true

[tool.coverage.run]
parallel = true
source = [
    "dboard",
]

[tool.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
